# comp0035-cw-JIAYECHEN-ANASTASIA-master

./: README.md  pyproject.toml
coursework1/: data exploration.py  from pathlib import Path.py
coursework1/data/: LHM_City_of_London.csv
